# multi-agent-customer-support

./: .agentcoreignore  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  GIT_READY_CHECKLIST.md  LICENSE  QUICK_TEST_PROMPTS.md  README.md  UI_TEST_GUIDE.md  agent.py  pyproject.toml  requirements.txt  setup.sh
agents/: README.md  __init__.py  base.py  escalation_agent.py  knowledge_agent.py  resolution_agent.py  sentiment_agent.py  ticket_agent.py
infrastructure/minimal/: README.md  main.tf  modules.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf
infrastructure/minimal/modules/agentcore-gateway/: main.tf  outputs.tf  variables.tf
infrastructure/minimal/modules/cognito/: main.tf  outputs.tf  variables.tf
infrastructure/minimal/modules/dynamodb/: main.tf  outputs.tf  variables.tf
infrastructure/minimal/modules/iam/: main.tf  outputs.tf  variables.tf
infrastructure/minimal/modules/lambda/: main.tf  outputs.tf  variables.tf
infrastructure/minimal/modules/s3/: main.tf  outputs.tf  variables.tf
infrastructure/minimal/modules/s3-vector/: main.tf  outputs.tf  variables.tf
knowledge-base/: sample-articles.json
lambda/: README.md
lambda/knowledge_ingestion/: main.py
lambda/knowledge_search/: main.py  requirements.txt
lambda/sentiment_analysis/: main.py
lambda/ticket_management/: main.py
scripts/: README.md
scripts/deploy/: deploy_agentcore.sh  initialize_s3_vectors.py  manage_knowledge_base.py  start_dev.sh
scripts/setup/: setup_venv.sh  update_env.sh
shared/: __init__.py
shared/utils/: __init__.py  agent_starter.py  auth.py  embedding_service.py  knowledge_ingestion_service.py  knowledge_search_service.py  logging.py  mcp_client.py  s3_vector_manager.py
tests/: README.md  check_bedrock_access.py  test_all_agents.sh  test_all_agents_e2e.sh  test_ltm_cross_session.py  test_session_memory_complete.py  test_ui_comprehensive.py
ui/: README.md  ui.py
